tests/ui/rfcs/rfc-2632-const-trait-impl/trait-default-body-stability.stderr
warning: the feature `effects` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/trait-default-body-stability.rs:4:30
   |
LL | #![feature(const_trait_impl, effects)]
   |                              ^^^^^^^
   |
   = note: see issue #102090 <https://github.com/rust-lang/rust/issues/102090> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: const `impl` for trait `Try` which is not marked with `#[const_trait]`
  --> $DIR/trait-default-body-stability.rs:18:12
   |
LL | impl const Try for T {
   |            ^^^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error: const `impl` for trait `FromResidual` which is not marked with `#[const_trait]`
  --> $DIR/trait-default-body-stability.rs:33:12
   |
LL | impl const FromResidual for T {
   |            ^^^^^^^^^^^^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error: aborting due to 2 previous errors; 1 warning emitted

